[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHSplit" type="HSplitContainer" parent="."]
anchor_top = 0.000755984
anchor_right = 0.999557
anchor_bottom = 1.001
margin_left = -0.453583
margin_bottom = -0.146423
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContent" type="VSplitContainer" parent="MainHSplit"]
margin_right = 440.0
margin_bottom = 600.0
split_offset = 200

[node name="ScrollContainer" type="ScrollContainer" parent="MainHSplit/LeftContent"]
margin_right = 440.0
margin_bottom = 200.0
scroll_horizontal_enabled = false

[node name="Container" type="VBoxContainer" parent="MainHSplit/LeftContent/ScrollContainer"]
margin_right = 428.0
margin_bottom = 272.0

[node name="Container1" type="HBoxContainer" parent="MainHSplit/LeftContent/ScrollContainer/Container"]
margin_right = 428.0
margin_bottom = 134.0

[node name="Node" type="Button" parent="MainHSplit/LeftContent/ScrollContainer/Container/Container1"]
margin_right = 140.0
margin_bottom = 134.0
icon = ExtResource( 1 )

[node name="Sprite" type="Button" parent="MainHSplit/LeftContent/ScrollContainer/Container/Container1"]
margin_left = 144.0
margin_right = 284.0
margin_bottom = 134.0
icon = ExtResource( 1 )

[node name="Label" type="Button" parent="MainHSplit/LeftContent/ScrollContainer/Container/Container1"]
margin_left = 288.0
margin_right = 428.0
margin_bottom = 134.0
icon = ExtResource( 1 )

[node name="Container2" type="HBoxContainer" parent="MainHSplit/LeftContent/ScrollContainer/Container"]
margin_top = 138.0
margin_right = 428.0
margin_bottom = 272.0

[node name="Node" type="Button" parent="MainHSplit/LeftContent/ScrollContainer/Container/Container2"]
margin_right = 140.0
margin_bottom = 134.0
icon = ExtResource( 1 )

[node name="Sprite" type="Button" parent="MainHSplit/LeftContent/ScrollContainer/Container/Container2"]
margin_left = 144.0
margin_right = 284.0
margin_bottom = 134.0
icon = ExtResource( 1 )

[node name="Label" type="Button" parent="MainHSplit/LeftContent/ScrollContainer/Container/Container2"]
margin_left = 288.0
margin_right = 428.0
margin_bottom = 134.0
icon = ExtResource( 1 )

[node name="Content" type="Tree" parent="MainHSplit/LeftContent"]
margin_top = 212.0
margin_right = 440.0
margin_bottom = 600.0

[node name="Canvas" type="VSplitContainer" parent="MainHSplit"]
margin_left = 452.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Panel" type="ColorRect" parent="MainHSplit/Canvas"]
margin_right = 572.0
margin_bottom = 600.0
color = Color( 0.239216, 0.215686, 0.215686, 1 )
[connection signal="button_down" from="MainHSplit/LeftContent/ScrollContainer/Container/Container1/Node" to="." method="_on_Node_button_down"]
[connection signal="button_up" from="MainHSplit/LeftContent/ScrollContainer/Container/Container1/Node" to="." method="_on_Node_button_up"]
[connection signal="cell_selected" from="MainHSplit/LeftContent/Content" to="." method="_on_Content_cell_selected"]
[connection signal="item_activated" from="MainHSplit/LeftContent/Content" to="." method="_on_Content_item_activated"]
[connection signal="item_edited" from="MainHSplit/LeftContent/Content" to="." method="_on_Content_item_edited"]
